--- a/style.css
+++ b/style.css
@@ -2,6 +2,29 @@ span{
     color: orange;
 }
 
+.hero-section{
+    display: flex;
+
+}
+.half-width{
+    width: 50%;
+}
+.first-div{
+    padding: 100px 30px;
+}
+
+.first-div h1 {
+    font-weight: 700;
+    font-size: 50px;
+}
+.link-button{
+    text-decoration: none;
+    background-image:linear-gradient(orange, tomato);
+    color: azure;
+    padding: 10px 20px;
+    border-radius: 30px;
+}
+
 .footer{
     background-color: black;
     color: azure;
