--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ span{
     font-weight: 700;
     font-size: 50px;
 }
+.first-div p{
+    font-family: 'Courier New',;
+    font-weight: 400;
+    font-size: 18px;
+}
 .link-button{
     text-decoration: none;
     background-image:linear-gradient(orange, tomato);
